fixed no scroll, select buttons expand/collapse on click instead of hover, no backdrop rendered if path null

--- a/src/App.scss
+++ b/src/App.scss
@@ -155,7 +155,7 @@
   .program-anim {
     width: 100%;
     max-height: 100%;
-    overflow: hidden;
+    overflow: auto;
     // display: none;
   }
 }
